[FIXED] css, responsive meta added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Vadim Prodan | CV</title>
 
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
           rel="stylesheet">
@@ -378,19 +379,19 @@
                         <i class="fas fa-cogs"></i>
                         <span>Technologies</span>
                     </span>
-                    <span class="icon">
+                        <span class="icon">
                         <i class="fab fa-steam"></i>
                         <span>Games</span>
                     </span>
-                    <span class="icon">
+                        <span class="icon">
                         <i class="fas fa-headphones-alt"></i>
                         <span>Music</span>
                     </span>
-                    <span class="icon">
+                        <span class="icon">
                         <i class="fas fa-bicycle"></i>
                         <span>Cycling</span>
                     </span>
-                    <span class="icon">
+                        <span class="icon">
                         <i class="fas fa-dumbbell"></i>
                         <span>Workout</span>
                     </span>
