--- a/index.html
+++ b/index.html
@@ -73,14 +73,19 @@
                     <div class="desc">
                         <div class="sub">
                             <h5>
-                                <span><i class="far fa-calendar-alt"></i>2016 – 2017</span>
+                                <span><i class="far fa-calendar-alt"></i>02.2018 – Present</span>
                                 <span class="location"><i class="fas fa-map-marker-alt"></i>Chernivtsi, Ukraine</span>
                             </h5>
-                            <h3 class="text-bold">PHP Developer</h3>
-                            <strong>Right-Road</strong>
+                            <h3 class="text-bold">Software Engineer</h3>
+                            <strong>Yukon Software</strong>
                             <ul class="text-muted">
-                                <li>Learned PHP & Web development basics.</li>
-                                <li>Worked on Laravel-based API project.</li>
+                                <li>Creating and executing unit test cases.</li>
+                                <li>Conceptual, logical and physical database design.</li>
+                                <li>Full stack development of various modules.</li>
+                                <li>Communication with clients.</li>
+                                <li>Coaching and mentoring.</li>
+                                <li>Conduct training for new developers.</li>
+                                <li>Technical lead on projects.</li>
                             </ul>
                         </div>
                         <div class="sub">
@@ -97,19 +102,14 @@
                         </div>
                         <div class="sub">
                             <h5>
-                                <span><i class="far fa-calendar-alt"></i>02.2018 – Present</span>
+                                <span><i class="far fa-calendar-alt"></i>2016 – 2017</span>
                                 <span class="location"><i class="fas fa-map-marker-alt"></i>Chernivtsi, Ukraine</span>
                             </h5>
-                            <h3 class="text-bold">Software Engineer</h3>
-                            <strong>Yukon Software</strong>
+                            <h3 class="text-bold">PHP Developer</h3>
+                            <strong>Right-Road</strong>
                             <ul class="text-muted">
-                                <li>Creating and executing unit test cases.</li>
-                                <li>Conceptual, logical and physical database design.</li>
-                                <li>Full stack development of various modules.</li>
-                                <li>Communication with clients.</li>
-                                <li>Coaching and mentoring.</li>
-                                <li>Conduct training for new developers.</li>
-                                <li>Technical lead on projects.</li>
+                                <li>Learned PHP & Web development basics.</li>
+                                <li>Worked on Laravel-based API project.</li>
                             </ul>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                             <h5 class="text-bold"><i class="fas fa-language"></i>Languages</h5>
                             <table class="skills">
                                 <tr>
-                                    <td>Ukrainian / Russian</td>
+                                    <td>Ukrainian</td>
                                     <td>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
