--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1f1f1f" />
+    <meta name="theme-color" content="#f5f5f5" />
     <title>Vadim Prodan | CV</title>
     <link rel="icon" sizes="16x16" href="/icon-16.png" type="image/png">
     <link rel="icon" sizes="32x32" href="/icon-32.png" type="image/png">
